--- a/index.html
+++ b/index.html
@@ -67,42 +67,42 @@
         <h3 class="skills__title">Skills</h3>
             <div class="skills__line">
                 <div class="skills__box">
-                    <ul>
+                    <ul class="skills__box__list">
                         <li class="skills__img"><img src="assets\htlm.png"></li>
                         <li class="skills__name"> HTML 5</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
-                    <ul>
+                    <ul class="skills__box__list">
                         <li class="skills__img"> <img src="assets\js_icon.png" alt=""></li>
                         <li class="skills__name">Javascript</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
-                    <ul>
+                    <ul class="skills__box__list">
                         <li class="skills__img"> <img src="assets\php_icon.png" alt=""></li>
                         <li class="skills__name">PHP</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
-                    <ul>
+                    <ul class="skills__box__list">
                         <li class="skills__img"><img src="assets\nodejs_icon.png" alt=""></li>
                         <li class="skills__name">Node JS</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
-                    <ul>
+                    <ul class="skills__box__list">
                         <li class="skills__img"> <img src="assets\react_icon.png" alt=""> </li>
                         <li class="skills__name">React</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
-                    <ul>
+                    <ul class="skills__box__list">
                         <li class="skills__img"> <img src="assets\css_icon.png" alt=""> </li>
                         <li class="skills__name">CSS</li>
                     </ul>
@@ -115,42 +115,42 @@
         <h3 class="hobbies__title">Hobbies</h3>
             <div class="hobbies__line">
                 <div class="hobbies__box">
-                    <ul>
+                    <ul class="hobbies__box__list">
                         <li class="hobbies__img"><img src="assets\skate_icon.png"></li>
                         <li class="hobbies__name"> Patinaje</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
+                    <ul  class="hobbies__box__list"
                         <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
                         <li class="hobbies__name">Tocar bajo</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
+                    <ul  class="hobbies__box__list">
                         <li class="hobbies__img"> <img src="assets\headphones_icon.png" alt=""></li>
                         <li class="hobbies__name">Oir música</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
+                    <ul  class="hobbies__box__list">
                         <li class="hobbies__img"><img src="assets\tv_icon.png" alt=""></li>
                         <li class="hobbies__name">Ver séries</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
+                    <ul  class="hobbies__box__list">
                         <li class="hobbies__img"> <img src="assets\forkspoon_icon.png" alt=""> </li>
                         <li class="hobbies__name">Cocinar</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
-                    <ul>
+                    <ul  class="hobbies__box__list">
                         <li class="hobbies__img"> <img src="assets\camera_icon.png" alt=""> </li>
                         <li class="hobbies__name">Tomar fotos</li>
                     </ul>
@@ -247,9 +247,9 @@
                     </div>
             </div>
         </div>  
-
+    </section>
         <!-- Sección de Contacto -->
-        <section class="formcontato" id="contacto">
+    <section class="formcontato" id="contacto">
             <div  class="formcontato__contacto">
                 <div class="formcontato--esquerda">
                     <img class="formcontato__img" src="assets\contact_image.png">
@@ -267,16 +267,16 @@
                     </form>
                 </div>
             </div>
-        </section>
+    </section>
 
         <!-- Sección de Footer -->
-        <section class="footer">
+    <section class="footer">
             <div class="footer__rodape">
                 <p>Desarrollado por Alejandro Sanchez</p>
                 <p>2023</p>
             </div>
-        </section>
-    </div>
+    </section>
+    
  <!-- Script del documento JavaScript -->
 <script src="validacion.js"></script>
 </body>
