Cambio en stules.css

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <section class="experience" id="xp">
         <h2 class="experience__section__title" >Experiencia Profissional</h2>
 
-        <div class="experiencie__box">
+        <div class="experience__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\decod_print.png">
             <div class="experience__info">
@@ -207,7 +207,7 @@
             </div>
         </div>  
 
-        <div class="experiencie__box">
+        <div class="experience__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\forca_print.png">
             <div class="experience__info">
@@ -221,7 +221,7 @@
             </div>
         </div>  
 
-        <div class="experiencie__box">
+        <div class="experience__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
             <img class="experience__img" src="assets\secretcode_print.png">
             <div class="experience__info-container">
@@ -235,7 +235,7 @@
             </div>
         </div>  
 
-        <div class="experiencie__box">
+        <div class="experience__box">
             <img class="experience__img" src="assets\forca2_print.png">
             <div class="experience__info-container">
                 <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
