--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Alejandro Sanchez y construyo paginas web</h2>
-                <h3 class="title__subsection">Soy formado en Medicina en la Universidad Mayor de San Simon y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
+                <h2 class="title__bio">Hola, mi nombre es Alejandro Sanchez y construyo páginas web</h2>
+                <h3 class="title__subsection">Soy egresado de la Universidad Mayor de San Simon y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
@@ -166,16 +166,16 @@
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img class="academic_item_img" src="assets\ufpr_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Análisis de datos</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2018 - UFPR</p></li>
+                    <li class="academic__courses__item__title"><h4>Medicina</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2017-2022</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
                     <li class="academic__courses__item__img"><img class="academic_item_img" src="assets\alura_logo.png"></li>
-                    <li class="academic__courses__item__title"><h4>Formación en UX Design</h4></li>
-                    <li class="academic__courses__item__subtitle"><p>2019 - Alura</p></li>
+                    <li class="academic__courses__item__title"><h4>Formación en Front-End</h4></li>
+                    <li class="academic__courses__item__subtitle"><p>2023</p></li>
                 </ul>
             </div>
             <div class="academic__courses__box">
