--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- Sección del Menú  -->
     <header class="header">
         <div class="header__estrellas-nombre">
-            <img src="assets\vector.png">
-            <h3>Alejandro Sanchez</h3>
+            <img class="stars" src="assets\vector.png">
+            <h3 class="nombre">Alejandro Sanchez</h3>
         </div>
         <nav>
             <ul class="menu__list">
@@ -40,15 +40,21 @@
         <div class="title__div">
             <img class="title__profile" src="assets\profile.png">
             <div class="title__container">
-                <h2 class="title__bio">Hola, mi nombre es Alejandro Sanchez y construyo páginas web</h2>
+                <h2 class="title__bio">Hola, mi nombre es Alejandro y construyo páginas web</h2>
                 <h3 class="title__subsection">Soy egresado de la Universidad Mayor de San Simon y actualmente estoy
                     participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                     <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="">Github <img src="assets\arrow.png"> </a></li>
-                    <li class="title__network__item"><a href="">Linkedin <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Instagram <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="">Currículo <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://github.com/AlejandroSanchezSolis">Github <img
+                                src="assets\arrow.png"> </a></li>
+                    <li class="title__network__item"><a
+                            href="https://www.linkedin.com/in/alejandro-sanchez-solis/">Linkedin <img
+                                src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://www.instagram.com/ale_26.s.s/">Instagram <img
+                                src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a
+                            href="https://alejandrosanchezsolis.github.io/Portafolio/https://alejandrosanchezsolis.github.io/Portafolio/">Currículo
+                            <img src="assets\arrow.png"></a></li>
                 </ul>
             </div>
         </div>
@@ -90,27 +96,6 @@
 
             <div class="skills__box">
                 <ul class="skills__box__list">
-                    <li class="skills__img"> <img src="assets\php_icon.png" alt=""></li>
-                    <li class="skills__name">PHP</li>
-                </ul>
-            </div>
-
-            <div class="skills__box">
-                <ul class="skills__box__list">
-                    <li class="skills__img"><img src="assets\nodejs_icon.png" alt=""></li>
-                    <li class="skills__name">Node JS</li>
-                </ul>
-            </div>
-
-            <div class="skills__box">
-                <ul class="skills__box__list">
-                    <li class="skills__img"> <img src="assets\react_icon.png" alt=""> </li>
-                    <li class="skills__name">React</li>
-                </ul>
-            </div>
-
-            <div class="skills__box">
-                <ul class="skills__box__list">
                     <li class="skills__img"> <img src="assets\css_icon.png" alt=""> </li>
                     <li class="skills__name">CSS</li>
                 </ul>
@@ -122,19 +107,6 @@
     <section class="hobbies" id="hobbies">
         <h3 class="hobbies__title">Hobbies</h3>
         <div class="hobbies__line">
-            <div class="hobbies__box">
-                <ul class="hobbies__box__list">
-                    <li class="hobbies__img"><img src="assets\skate_icon.png"></li>
-                    <li class="hobbies__name"> Patinaje</li>
-                </ul>
-            </div>
-
-            <div class="hobbies__box">
-                <ul class="hobbies__box__list">
-                    <li class="hobbies__img"> <img src="assets\guitar_icon.png" alt=""></li>
-                    <li class="hobbies__name">Tocar bajo</li>
-                </ul>
-            </div>
 
             <div class="hobbies__box">
                 <ul class="hobbies__box__list">
@@ -146,7 +118,7 @@
             <div class="hobbies__box">
                 <ul class="hobbies__box__list">
                     <li class="hobbies__img"><img src="assets\tv_icon.png" alt=""></li>
-                    <li class="hobbies__name">Ver séries</li>
+                    <li class="hobbies__name">Ver series</li>
                 </ul>
             </div>
 
@@ -173,7 +145,8 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img class="academic_item_img" src="assets\ufpr_logo.png">
+                    <li class="academic__courses__item__img"><img class="academic_item_img"
+                            src="assets/Universidad_Mayor_de_San_Simón_Cochabamba_Bolivia.png">
                     </li>
                     <li class="academic__courses__item__title">
                         <h4>Medicina</h4>
@@ -196,92 +169,31 @@
                     </li>
                 </ul>
             </div>
-            <div class="academic__courses__box">
-                <ul class="academic__courses__list">
-                    <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img class="academic_item_img" src="assets\ufrj_logo.png">
-                    </li>
-                    <li class="academic__courses__item__title">
-                        <h4>Posgrado en diseño</h4>
-                    </li>
-                    <li class="academic__courses__item__subtitle">
-                        <p>En curso - UFRJ</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
     </section>
 
     <!-- Sección de Experiencia Profesional/Proyectos-->
     <section class="experience" id="xp">
-        <h2 class="experience__section__title">Experiencia Profissional</h2>
+        <h2 class="experience__section__title">Proyectos</h2>
 
         <div class="experience__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\decod_print.png">
+            <img class="experience__img" src="assets/encriptador-challenge.png">
             <div class="experience__info">
                 <h2 class="experience__title">Encriptador de texto</h2>
                 <h3 class="experience__text">Challenge Alura Codificador </h3>
                 <div class="experience__description">
                     <!-- Pon el enlace del proyecto en Github o GithubPages -->
                     <span class="experience__repo"><a
-                            href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button
+                            href="https://github.com/AlejandroSanchezSolis/encriptador-de-texto"><button
                                 class="experiencia__botao--repo">Repositório</button></a></span>
-                    <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver
+                    <span class="experience__demo"><a
+                            href="https://alejandrosanchezsolis.github.io/encriptador-de-texto/"><button
+                                class="experience__botao--demo">Ver
                                 demo</button></a></span>
                 </div>
             </div>
         </div>
 
-        <div class="experience__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\forca_print.png">
-            <div class="experience__info">
-                <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                <div class="experience__description">
-                    <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                    <span class="experience__repo"><a
-                            href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button
-                                class="experiencia__botao--repo">Repositório</button></a></span>
-                    <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver
-                                demo</button></a></span>
-                </div>
-            </div>
-        </div>
-
-        <div class="experience__box">
-            <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\secretcode_print.png">
-            <div class="experience__info-container">
-                <h2 class="experience__title">Encriptador de texto</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                <div class="experience__description">
-                    <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                    <span class="experience__repo"><a
-                            href="https://github.com/alura-challenges/challenge-one-encriptador-latam"><button
-                                class="experiencia__botao--repo">Repositório</button></a></span>
-                    <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver
-                                demo</button></a></span>
-                </div>
-            </div>
-        </div>
-
-        <div class="experience__box">
-            <img class="experience__img" src="assets\forca2_print.png">
-            <div class="experience__info-container">
-                <h2 class="experience__title">Juego creado con HTML, CSS y JavaScript</h2>
-                <h3 class="experience__text">Challenge Oracle </h3>
-                <div class="experience__description">
-                    <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                    <span class="experience__repo"><a
-                            href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button
-                                class="experiencia__botao--repo">Repositório</button></a></span>
-                    <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver
-                                demo</button></a></span>
-                </div>
-            </div>
-        </div>
     </section>
     <!-- Sección de Contacto -->
     <section class="formcontato" id="contacto">
@@ -294,13 +206,23 @@
                 <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
                 <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo
                     antes posible. </h3>
-                <form class="formcontato__form" name="form">
-                    <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre" required>
-                    <input class="formcontato__input" type="email" name="email" placeholder="E-mail" required>
-                    <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto" required>
+                <form class="formcontato__form" name="form" action="https://formsubmit.co/alessolis26@gmail.com"
+                    method="POST">
+                    <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre completo" required
+                        data-tipo="nombre" id="nombre" pattern="^[a-zA-Z\s]{1,50}$">
+                    <span id="error-nombre"></span>
+                    <input class="formcontato__input" type="text" name="número" placeholder="Teléfono de contacto"
+                        required data-tipo="telefono">
+                    <input class="formcontato__input" type="email" name="email" placeholder="E-mail" required
+                        data-tipo="email" id="email" pattern="^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+.[a-zA-Z]{2,4}$">
+                    <span id="error-email"></span>
+                    <input class="formcontato__input" type="text" name="asunto" placeholder="Asunto" required
+                        data-tipo="asunto" id="asunto" maxlength="50">
+                    <span id="error-asunto"></span>
                     <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje"
-                        placeholder="Mensaje" required></textarea>
-                    <button type="submit" class="formcontato__botao">Enviar mensaje</button>
+                        placeholder="Mensaje" required data-tipo="asunto" id="asunto" maxlength="300"></textarea>
+                    <span id="error-mensaje"></span>
+                    <button type="submit" class="formcontato__botao" id="boton-enviar">Enviar mensaje</button>
                 </form>
             </div>
         </div>
@@ -315,7 +237,7 @@
     </section>
 
     <!-- Script del documento JavaScript -->
-    <script src="validacion.js"></script>
+    <script src="js/validacion.js"></script>
 </body>
 
 </html>
